fixed skills animation on mobile

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -79,10 +79,10 @@ app-about-me {
         margin: 0;
     }
 
-    #first-arrow {
-        // // margin-left: calc(50vw - 1rem) !important;
-        // margin-top: -10vh;
-    }
+    // #first-arrow {
+    //     // // margin-left: calc(50vw - 1rem) !important;
+    //     // margin-top: -10vh;
+    // }
 
     // #second-arrow {
     //     margin-left: calc(50vw - 15rem) !important;
